Add time trailing space tests and fix bugs